<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EP Mobile</string>
    <string name="about_text">EP Mobile is a package of
		useful cardiac electrophysiology
		tools for your Android phone or tablet.
		These tools are for reference purposes only
		and are not meant to substitute for clinical judgment.
		If you have suggestions or comments, please contact us.
		\n\nEmail: mannd@epstudiossoftware.com
		\nWeb: www.epstudiossoftware.com
		\nSource: github.com/mannd/epmobile
		\n\nCopyright \u00a9 2011-2014 EP Studios, Inc.
		\nLicensed under GNU GPL v3.</string>
    <string name="main_index_title">EP Mobile</string>
    <string name="about_label">About</string>
    <string name="about_title">About EP Mobile</string>
    <string name="dofetilide_label">Dofetilide Calculator</string>
    <string name="dofetilide_calculator_title">Dofetilide Calculator</string>
    <string name="dabigatran_calculator_title">Dabigatran Calculator</string>
    <string name="dabigatran_label">Dabigatran Calculator</string>
    <string name="qtc_calculator_title">QTc Calculator</string>
    <string name="cycle_length_label">Interval/Rate Conversion</string>
    <string name="cycle_length_calculator_title">Interval/Rate Conversion</string>
    <string name="rr_hint">RR (msec)</string>
    <string name="interval_rate_title">Use RR Interval or Heart Rate</string>
    <string name="interval_rate_summary">Use RR interval or heart rate as default</string>
    <string name="qt_label">QT Interval (msec)</string>
    <string name="qt_hint">QT (msec)</string>
    <string name="qtc_result_label">QTc (msec)</string>
    <string name="qtc_formula_label">QTc Formula</string>
    <string name="calculate_label">Calculate!</string>
    <string name="clear_label">Clear</string>
    <string name="dose_result_label">Dose</string>
    <string name="weight_hint">Weight (kg)</string>
    <string name="weight_lb_hint">Weight (lb)</string>
    <string name="creatinine_hint">Creatinine (mg/dL)</string>
    <string name="age_hint">Age (yr)</string>
    <string name="age_label">Age (yr)</string>
    <string name="creatinine_clearance_label"></string>
    <string name="male_label">Male</string>
    <string name="female_label">Female</string>
    <string name="cl_label">Interval to Rate</string>
    <string name="cl_hint">Interval (msec)</string>
    <string name="hr_label">Rate to Interval</string>
    <string name="hr_hint">Rate (bpm)</string>
    <string name="calculated_result_label"></string>
    <string name="qtc_formula_title">Default QTc Formula</string>
    <string name="qtc_formula_summary">Select the default QTc formula</string>
    <string name="maximum_qtc_title">Maximum QTc</string>
    <string name="maximum_qtc_summary">Enter the maximum QTc in msec</string>
    <string name="maximum_qtc_message">This value in msec is used to
		color code (with red) abnormally high QTc values</string>
    <string name="maximum_qtc_default_value">440</string>
    <string name="settings_label">Settings</string>
    <string name="settings_shortcut">s</string>
    <string name="settings_title">EP Mobile Settings</string>
    <string name="hasbled_title">HAS-BLED Score</string>
    <string name="htn_label">Hypertension (systolic BP \u2267 160)</string>
    <string name="abnormal_renal_label">Abnormal renal function
		(dialysis, kidney transplant, Cr \u2267 2.6 mg/dL)</string>
    <string name="abnormal_liver_label">Abnormal liver function</string>
    <string name="stroke_label">Previous stroke history</string>
    <string name="bleeding_label">Major bleeding history</string>
    <string name="labile_inr_label">Labile INRs (high INRs, or &lt;60%
		of time in therapeutic range)</string>
    <string name="age65_label">Age 65 or over</string>
    <string name="drug_label">Taking antiplatelet drugs
		(e.g. ASA, Plavix)</string>
    <string name="etoh_label">Alcohol intake (8 or more drinks per week)</string>
    <string name="normal_hasbled">Low bleeding risk</string>
    <string name="abnormal_hasbled">High bleeding risk</string>
    <string name="chads_title">CHADS\u2082 Score</string>
    <string name="chf_label">Congestive heart failure</string>
    <string name="age75_label">Age 75 or over</string>
    <string name="diabetes_label">Diabetes mellitus</string>
    <string name="low_chads_message">Aspirin recommended</string>
    <string name="medium_chads_message">Aspirin or
		anticoagulation (warfarin, dabigatran, rivaroxaban or apixaban) recommended</string>
    <string name="high_chads_message">Anticoagulation (warfarin, dabigitran, rivaroxaban or apixaban) recommended</string>
    <string name="chadsvasc_title">CHA\u2082DS\u2082-VASc Score</string>
    <string name="vascular_label">Vascular disease (e.g. PVD, CAD, aortic plaque)</string>
    <string name="low_chadsvasc_message">No antithrombotic therapy or use Aspirin</string>
    <string name="medium_chadsvasc_message">Anticoagulation (warfarin, dabigitran, rivaroxaban or apixaban) or Aspirin (anticoagulation preferred)</string>
    <string name="high_chadsvasc_message">Anticoagulation
		(warfarin, dabigitran, rivaroxaban or apixaban) recommended</string>
    <string name="warfarin_title">Warfarin Clinic</string>
    <string name="warfarin_label">Warfarin Dose Calculator</string>
    <string name="tablet_label">Tablet</string>
    <string name="tablet1">1 mg</string>
    <string name="tablet2">2 mg</string>
    <string name="tablet3">2.5 mg</string>
    <string name="tablet4">3 mg</string>
    <string name="tablet5">4 mg</string>
    <string name="tablet6">5 mg</string>
    <string name="tablet7">6 mg</string>
    <string name="tablet8">7.5 mg</string>
    <string name="tablet9">10 mg</string>
    <string name="inr_label">Current INR</string>
    <string name="weekly_dose_label">Current Dose (mg/wk)</string>
    <string name="inr_hint">INR</string>
    <string name="weekly_dose_hint">Dose (mg/wk)</string>
    <string name="inr_target_label">INR Target</string>
    <string name="inr_target1">2.0 – 3.0</string>
    <string name="inr_target2">2.5 – 3.5</string>
    <string name="default_warfarin_tablet_title">Default Warfarin Tablet</string>
    <string name="default_warfarin_tablet_summary">Select the default warfarin tablet strength</string>
    <string name="default_inr_target_title">Default INR Target</string>
    <string name="default_inr_target_summary">Default INR target range</string>
    <string name="dose_table_title">Suggested Weekly Warfarin Doses</string>
    <string name="warfarin_result_title">Suggested Warfarin Dosing</string>
    <string name="warfarin_reference">Reference: Horton J, Bushwick B: American Family
		Physician. Feb 1, 1999.
		http://www.aafp.org/afp/990201ap/635.html</string>
    <string name="wct_algorithm_list_title">Wide Complex Tachycardia</string>
    <string name="wct_algorithm_title">Wide Complex Tachycardia</string>
    <string name="brugada_vt_title">Brugada Criteria SVT vs VT</string>
    <string name="brugada_wct_title">Brugada Algorithm</string>
    <string name="brugada_step_1">Absence of an RS complex in all precordial leads?</string>
    <string name="brugada_step_2">R to S interval > 100 msec in one precordial lead?</string>
    <string name="brugada_step_3">AV dissociation?</string>
    <string name="brugada_step_4">Morphology criteria for VT present in both
		precordial leads V1-2 and V6?</string>
    <string name="vt_result">Wide complex tachycardia is most likely Ventricular
		Tachycardia.</string>
    <string name="svt_result">Wide complex tachycardia is most likely
		Supraventricular Tachycardia.</string>
    <string name="brugada_reference">Reference: Brugada P, et al. Circ 1991;83:1649.</string>
    <string name="wct_result_label">WCT Result</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back">Back</string>
    <string name="done_label">Done</string>
    <string name="reset_label">Reset</string>
    <string name="dont_reset_label">Don\'t Reset</string>
    <string name="copy_report_label">Copy Result</string>
    <string name="dosing_label">Dosing</string>
    <string name="morphology_label">Morphology Criteria</string>
    <string name="morphology_title">@string/morphology_label</string>
    <string name="broad_r">R > 30 msec in V1 or V2</string>
    <string name="broad_rs">Onset to nadir S > 60 msec in V1 or V2</string>
    <string name="notched_s">Notched or slurred S in V1 or V2</string>
    <string name="q_v6">QR or QS in V6</string>
    <string name="monophasic_r_v1">Monophasic R in V1</string>
    <string name="qr_v1">QR in V1</string>
    <string name="rs_v1">RS in V1</string>
    <string name="deep_s_v6">R to S ratio &lt; 1 in V6</string>
    <string name="monophasic_r_v6">Monophasic R in V6</string>
    <string name="rwpt_title">R Wave Peak Time Criterion</string>
    <string name="rwpt_text">R wave peak time in lead II (RWPT).
		Measure the onset of the QRS in ECG lead II to the first
		change in polarity (nadir Q or peak R). RWPT \u2265 50 msec
		strongly suggests VT (positive likelihood ratio 34.8).
		Reference: Pava LF, et al. Heart Rhythm 2010;7:922.</string>
    <string name="rbbb_wct_label">"RBBB" Tachycardia</string>
    <string name="lbbb_wct_label">"LBBB" Tachycardia</string>
    <string name="wellens_reference">From Wellens et al. Am J Med 1978;64:27.</string>
    <string name="normal_ep_values_title">Normal EP Values</string>
    <string name="basic_intervals_label">Basic Conduction Intervals</string>
    <string name="sinus_node_label">Sinus Node Function</string>
    <string name="refractory_periods_label">Refractory Periods and Block Cycle Lengths</string>
    <string name="normal_ep_values_reference">Reference: Josephson ME. Clinical Cardiac
		Electrophysiology. Techniques and Interpretations. 2nd Edition 1993.
		Lea &amp; Febiger.</string>
    <string name="arvc_list_title">ARVC/D Diagnosis</string>
    <string name="arvc_title">ARVC/D Diagnosis</string>
    <string name="arvc_2010_criteria_title">ARVC/D 2010 Diagnostic Criteria</string>
    <string name="global_dysfunction_label">I. Global or regional dysfunction and structural
		alterations</string>
    <string name="major">MAJOR</string>
    <string name="minor">MINOR</string>
    <string name="by_echo_label">By 2D echo:</string>
    <string name="regional_echo_abnormality_label">Regional RV akinesia, dyskinesia, or aneurysm</string>
    <string name="regional_echo_minor_abnormality_label">Regional RV akinesia or dyskinesia</string>
    <string name="regional_mri_abnormality_label">Regional RV akinesia or dyssynchronous RV
		contraction</string>
    <string name="and_one_echo_label">and one of the following (end diastole)…</string>
    <string name="and_one_label">and one of the following…</string>
    <string name="major_plax_criteria">PLAX RVOT \u2265 32 mm (corrected for body size
		[PLAX/BSA] \u2265 19 mm/m\u00b2)</string>
    <string name="major_psax_criteria">PSAX RVOT \u2265 36 mm (corrected for body size
		[PSAX/BSA] \u2265 21 mm/m\u00b2)</string>
    <string name="fractional_area_criteria">fractional area change \u2264 33%</string>
    <string name="minor_plax_criteria">PLAX RVOT \u2265 29 to \u003c 32 mm (corrected for
		body size
		[PLAX/BSA] \u2265 16 to \u003c 19 mm/m\u00b2)</string>
    <string name="minor_psax_criteria">PSAX RVOT \u2265 32 to \u003c 36mm (corrected for
		body size
		[PSAX/BSA] \u2265 18 to \u003c 21 mm/m\u00b2)</string>
    <string name="index_event_label">Index Event Date</string>
    <string name="number_of_days_label">Number of Days</string>
    <string name="number_of_days_hint">Days</string>
    <string name="days_40">40 Days (ICD OK s/p MI)</string>
    <string name="days_90">90 Days (ICD OK s/p revasc or NICM)</string>
    <string name="days_30">30 Days (new H&amp;P needed)</string>
    <string name="date_result_label">Date</string>
    <string name="reverse_time_label">Subtract Days</string>
</resources>