<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TableRow>

            <Spinner android:id="@+id/interval_rate_spinner"/>

            <EditText
                android:id="@+id/rrEditText"
                android:hint="@string/rr_hint"
                android:inputType="number"
                android:text=""/>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView2"
                android:text="@string/qt_label"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:id="@+id/qtEditText"
                android:hint="@string/qt_hint"
                android:inputType="number"
                android:text=""/>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView3"
                android:text="@string/qtc_formula_label"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Spinner
                android:id="@+id/qtc_formula_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TextView
            android:id="@+id/calculated_qtc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/qtc_result_label"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/calculate_qtc_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calculate_label" />

            <Button
                android:id="@+id/clear_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear_label"/>
        </LinearLayout>

    </TableLayout>

</LinearLayout>